--- a/ssWeb/ssWeb.csproj
+++ b/ssWeb/ssWeb.csproj
@@ -157,8 +157,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ISurveyViewModel.cs" />
     <Compile Include="Models\SurveyManager.cs" />
     <Compile Include="Models\SurveyQuestionAnswerViewModel.cs" />
+    <Compile Include="Models\SurveyViewModel.cs" />
     <Compile Include="Models\ViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs">
@@ -167,6 +169,7 @@
     <Compile Include="Repositories\IRoleRepository.cs" />
     <Compile Include="Repositories\ISurveyRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
+    <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\SurveyRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="Role.cs">
