Cleanup and addition of roles editor and unit tests.

--- a/ssWeb/ssWeb.csproj
+++ b/ssWeb/ssWeb.csproj
@@ -151,8 +151,8 @@
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SurveysController.cs" />
-    <Compile Include="Controllers\UserRolesController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -175,6 +175,7 @@
     <Compile Include="Role.cs">
       <DependentUpon>SimpleSurveyModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Services\Helpers.cs" />
     <Compile Include="SimpleSurveyModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -271,6 +272,11 @@
     <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Roles\Create.cshtml" />
+    <Content Include="Views\Roles\Delete.cshtml" />
+    <Content Include="Views\Roles\Details.cshtml" />
+    <Content Include="Views\Roles\Edit.cshtml" />
+    <Content Include="Views\Roles\Index.cshtml" />
     <None Include="Views\Shared\_topNav.cshtml" />
     <None Include="Views\UserRoles\Index.cshtml" />
   </ItemGroup>
