--- a/ssWeb.Tests/ssWeb.Tests.csproj
+++ b/ssWeb.Tests/ssWeb.Tests.csproj
@@ -87,8 +87,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\SurveysControllerTest.cs" />
+    <Compile Include="Controllers\UserRolesControllerTest.cs" />
+    <Compile Include="Controllers\UsersControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="Repositories\SurveyRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
