--- a/ssWeb/packages.config
+++ b/ssWeb/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="AutoPoco" version="1.0.0.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="Faker.Net" version="1.0.3" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
