--- a/ssWeb.Tests/ssWeb.Tests.csproj
+++ b/ssWeb.Tests/ssWeb.Tests.csproj
@@ -46,6 +46,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Faker.Net.1.0.3\lib\net40\Faker.NET4.dll</HintPath>
     </Reference>
+    <Reference Include="FizzWare.NBuilder">
+      <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Moq">
@@ -102,6 +105,9 @@
     <Compile Include="Controllers\SurveysControllerTest.cs" />
     <Compile Include="Controllers\UserRolesControllerTest.cs" />
     <Compile Include="Controllers\UsersControllerTest.cs" />
+    <Compile Include="Fakes\NBuilderTests.cs" />
+    <Compile Include="Fakes\AutoPocoTests.cs" />
+    <Compile Include="Fakes\FakerNetTests.cs" />
     <Compile Include="Helpers\UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
